k8s/deploy-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-tracker-ui
  labels:
    name: service-tracker-ui
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: service-tracker-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-tracker-ui
  labels:
    app: service-tracker-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-tracker-ui
  template:
    metadata:
      labels:
        app: service-tracker-ui
    spec:
      containers:
      - env:
          - name: FLIGHT_API
            value: http://flights-api:3003/latest
          - name: WEATHER_API
            value: http://weather-api:3015/styling
          - name: QUAKES_API
            value: http://quakes-api:3012/latest
          - name: APPINSIGHTS_INSTRUMENTATIONKEY
            value: 6dc23005-a1d0-418a-82bd-b232498b5221
          - name: KUBE_NODE_NAME
            valueFrom:
              fieldRef:
                fieldPath: spec.nodeName
        image: briaracr.azurecr.io/chzbrgr71/service-tracker-ui:v4
        imagePullPolicy: Always
        name: service-tracker-ui
        ports:
        - containerPort: 8080
          protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: flights-api
  labels:
    name: flights-api
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 3003
    targetPort: 3003
  selector:
    app: flights-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flights-api
  labels:
    app: flights-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flights-api
  template:
    metadata:
      labels:
        app: flights-api
    spec:
      containers:
        - image: briaracr.azurecr.io/chzbrgr71/flights-api:v4
          imagePullPolicy: Always
          name: flights-api
          ports:
          - containerPort: 3003
            protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: quakes-api
  labels:
    name: quakes-api
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 3012
    targetPort: 3012
  selector:
    app: quakes-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quakes-api
  labels:
    app: quakes-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quakes-api
  template:
    metadata:
      labels:
        app: quakes-api
    spec:
      containers:
        - image: briaracr.azurecr.io/chzbrgr71/quakes-api:v4
          imagePullPolicy: Always
          name: quakes-api
          ports:
          - containerPort: 3012
            protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: weather-api
  labels:
    name: weather-api
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 3015
    targetPort: 3015
  selector:
    app: weather-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-api
  labels:
    app: weather-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-api
  template:
    metadata:
      labels:
        app: weather-api
    spec:
      containers:
        - image: briaracr.azurecr.io/chzbrgr71/weather-api:v4
          imagePullPolicy: Always
          name: weather-api
          ports:
          - containerPort: 3015
            protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: data-api
  labels:
    name: data-api
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 3009
    targetPort: 3009
  selector:
    app: data-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-api
  template:
    metadata:
      labels:
        app: data-api
    spec:
      containers:
        - image: briaracr.azurecr.io/chzbrgr71/data-api:v4
          imagePullPolicy: Always
          name: data-api
          ports:
          - containerPort: 3009
            protocol: TCP
      restartPolicy: Always
