k8s/deploy-app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: geo-dashboard
  labels:
    name: geo-dashboard
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: geo-dashboard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geo-dashboard
  labels:
    app: geo-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geo-dashboard
  template:
    metadata:
      labels:
        app: geo-dashboard
    spec:
      containers:
      - env:
          - name: FLIGHT_API
            value: http://flights-api:3003/latest
          - name: WEATHER_API
            value: http://weather-api:3015/styling
          - name: QUAKES_API
            value: http://quakes-api:3012/latest
          - name: APPINSIGHTS_INSTRUMENTATIONKEY
            value: 6dc23005-a1d0-418a-82bd-b232498b5221
          - name: KUBE_NODE_NAME
            valueFrom:
              fieldRef:
                fieldPath: spec.nodeName
        image: briaracr.azurecr.io/chzbrgr71/service-tracker-ui:v3
        imagePullPolicy: Always
        name: geo-dashboard
        ports:
        - containerPort: 8080
          protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: flights-api
  labels:
    name: flights-api
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 3003
    targetPort: 3003
  selector:
    app: flights-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flights-api
  labels:
    app: flights-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flights-api
  template:
    metadata:
      labels:
        app: flights-api
    spec:
      containers:
        - image: briaracr.azurecr.io/chzbrgr71/flights-api:v3
          imagePullPolicy: Always
          name: flights-api
          ports:
          - containerPort: 3003
            protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: data-api
  labels:
    name: data-api
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 3009
    targetPort: 3009
  selector:
    app: data-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-api
  template:
    metadata:
      labels:
        app: data-api
    spec:
      containers:
        - image: briaracr.azurecr.io/chzbrgr71/data-api:v3
          imagePullPolicy: Always
          name: data-api
          ports:
          - containerPort: 3009
            protocol: TCP
      restartPolicy: Always
