k8s/istio-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cosmos-db
spec:
  hosts:
  - service-mesh-demo-eu.documents.azure.com
  addresses:
  - 40.78.226.8/27
  ports:
  - number: 10255
    protocol: mongo
    name: mongo-port
  resolution: NONE
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: flights
spec:
  hosts:
  - opensky-network.org
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: quakes
spec:
  hosts:
  - earthquake.usgs.gov
  ports:
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: weather
spec:
  hosts:
  - dataservice.accuweather.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
